// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Component: ColorPicker ui default 1`] = `
<div>
  <div
    class="color-picker mb-3"
    color="success"
  >
    <div
      class="d-flex"
    >
      <button
        aria-describedby="1"
        class="btn btn-primary"
        type="button"
      >
        Select your best friend
      </button>
    </div>
    Some error
  </div>
</div>
`;

exports[`Component: ColorPicker ui open 1`] = `
<DocumentFragment>
  <div
    class="color-picker mb-3"
    color="success"
  >
    <div
      class="d-flex"
    >
      <button
        aria-describedby="3"
        class="btn btn-primary"
        type="button"
      >
        Select your best friend
      </button>
    </div>
    Some error
  </div>
</DocumentFragment>
`;

exports[`Component: ColorPicker ui with selected value 1`] = `
<div>
  <div
    class="color-picker mb-3"
    color="success"
  >
    <div
      class="d-flex"
    >
      <div
        class="d-flex justify-content-between"
      >
        <div
          class="border p-1 me-3"
        >
          <div
            class="h-100"
            id="color-picker-value"
            style="background-color: rgb(205, 205, 205); width: 42px;"
          />
        </div>
        <u
          class="align-self-center clickable fw-lighter me-3"
          role="button"
        >
          Clear
        </u>
      </div>
      <button
        aria-describedby="4"
        class="btn btn-primary"
        type="button"
      >
        Select your best friend
      </button>
    </div>
    Some error
  </div>
</div>
`;

exports[`Component: ColorPicker value changes becomes empty: with value 1`] = `
<div>
  <div
    class="color-picker mb-3"
    color="success"
  >
    <div
      class="d-flex"
    >
      <div
        class="d-flex justify-content-between"
      >
        <div
          class="border p-1 me-3"
        >
          <div
            class="h-100"
            id="color-picker-value"
            style="background-color: rgb(205, 205, 205); width: 42px;"
          />
        </div>
        <u
          class="align-self-center clickable fw-lighter me-3"
          role="button"
        >
          Clear
        </u>
      </div>
      <button
        aria-describedby="23"
        class="btn btn-primary"
        type="button"
      >
        Select your best friend
      </button>
    </div>
    Some error
  </div>
</div>
`;

exports[`Component: ColorPicker value changes becomes empty: without value 1`] = `
<DocumentFragment>
  <div
    class="color-picker mb-3"
    color="success"
  >
    <div
      class="d-flex"
    >
      <button
        aria-describedby="24"
        class="btn btn-primary"
        type="button"
      >
        Select your best friend
      </button>
    </div>
    Some error
  </div>
</DocumentFragment>
`;

exports[`Component: ColorPicker value changes becomes filled: with value 1`] = `
<DocumentFragment>
  <div
    class="color-picker mb-3"
    color="success"
  >
    <div
      class="d-flex"
    >
      <div
        class="d-flex justify-content-between"
      >
        <div
          class="border p-1 me-3"
        >
          <div
            class="h-100"
            id="color-picker-value"
            style="background-color: rgb(66, 66, 66); width: 42px;"
          />
        </div>
        <u
          class="align-self-center clickable fw-lighter me-3"
          role="button"
        >
          Clear
        </u>
      </div>
      <button
        aria-describedby="26"
        class="btn btn-primary"
        type="button"
      >
        Select your best friend
      </button>
    </div>
    Some error
  </div>
</DocumentFragment>
`;

exports[`Component: ColorPicker value changes becomes filled: without value 1`] = `
<div>
  <div
    class="color-picker mb-3"
    color="success"
  >
    <div
      class="d-flex"
    >
      <button
        aria-describedby="25"
        class="btn btn-primary"
        type="button"
      >
        Select your best friend
      </button>
    </div>
    Some error
  </div>
</div>
`;
